changing .product height from fixed value to auto fixes overlapping

--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -9,8 +9,8 @@ h1 {
   border: double;
   //padding: 5px;
   margin: 20px;
-  //font-weight: 400;
-  //font-size: 3em;
+  font-weight: 400;
+  font-size: 3em;
 }
 
 // added to style link
@@ -53,7 +53,7 @@ a {
 
 .product {
   width: 100%;
-  height: 450px;
+  height: auto;//450px;
   padding: 20px;
   border-bottom: dotted 1px black;
 }
